--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
